tests/error/func_ret_array_empty.gw
#! [contains] must be defined with empty
fun int[1] my_func(int i[]){}
